Fix Railway deployment: add fallback configs

--- a/.env.railway
+++ b/.env.railway
@@ -22,7 +22,7 @@ DATABASE_URL=${DATABASE_URL}
 
 # Application Settings
 APP_HOST=0.0.0.0
-APP_PORT=${PORT:-8000}
+PORT=8000
 DEBUG=false
 
 # Analysis Settings
